// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiAvatar allows a name composed entirely of whitespace 1`] = `
<div
  aria-label="aria-label"
  class="euiAvatar euiAvatar--m euiAvatar--user testClass1 testClass2"
  data-test-subj="test subject string"
  style="background-color:#ee789d;color:#000000"
  title="  "
>
  <span
    aria-hidden="true"
  >
      
  </span>
</div>
`;

exports[`EuiAvatar is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiAvatar euiAvatar--m euiAvatar--user testClass1 testClass2"
  data-test-subj="test subject string"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props color as null is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props color as plain is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user euiAvatar--plain"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props color as string is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user"
  style="background-color:#000;color:#FFFFFF"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props iconType and iconColor as null is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-label="name"
    class="euiAvatar__icon"
    data-euiicon-type="bolt"
  />
</div>
`;

exports[`EuiAvatar props iconType and iconColor is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-label="name"
    class="euiAvatar__icon"
    color="primary"
    data-euiicon-type="bolt"
  />
</div>
`;

exports[`EuiAvatar props iconType and iconSize is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-label="name"
    class="euiAvatar__icon"
    color="#000000"
    data-euiicon-type="bolt"
  />
</div>
`;

exports[`EuiAvatar props iconType is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-label="name"
    class="euiAvatar__icon"
    color="#000000"
    data-euiicon-type="bolt"
  />
</div>
`;

exports[`EuiAvatar props imageUrl is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user"
  style="background-color:#e4a6c7;color:#000000;background-image:url(image url)"
  title="name"
/>
`;

exports[`EuiAvatar props initials is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    l
  </span>
</div>
`;

exports[`EuiAvatar props initialsLength is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    na
  </span>
</div>
`;

exports[`EuiAvatar props isDisabled is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user euiAvatar-isDisabled"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props size l is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--l euiAvatar--user"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props size m is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props size s is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--s euiAvatar--user"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props size xl is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--xl euiAvatar--user"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props type is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--space"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar should throw error if color is not a hex 1`] = `"EuiAvatar needs to pass a valid color. This can either be a three or six character hex value"`;
